--- a/src/style.css
+++ b/src/style.css
@@ -242,7 +242,8 @@ a:focus {
 
 .global-wrapper {
   margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
+  /* max-width: var(--maxWidth-wrapper); */
+  max-width: 100%;
   padding: var(--spacing-10) var(--spacing-5);
 }
 
