--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,8 +1,34 @@
 @charset "utf-8";
 
 // Import a Google Font
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
+// Google Material Icons -> imported via @fontsource/material-icons
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;  /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+  
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+  
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+  
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+}
+  
 
 // Set your brand colors
 $yellow: #f5be16;
@@ -36,22 +62,37 @@ $badge-padding: .25rem .4rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.15);
 }
 
-.is-fullheight{
-    height: 100%;
-}
-
 .tile.is-child.card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 .hero-section{
-    max-height: 50vh;
+    max-height: 60vh;
 }
-.hero-image{
-    position: relative;
-}
+
 .hero-body{
     position: absolute;
     width:100%;
+}
+
+.hero-gradient {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: heroGradient 30s ease infinite;
+    height: 400px;
+
+}
+
+@keyframes heroGradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
